
o Introduced a new operator for MERIS named 'Radiometry Correction'. It combines a
  SMILE correction, an equalisation, a radiance-to-reflectance conversion and a new
  radiometric re-calibration.

o A new tool for exporting pixels from a bunch of data products has been introduced.


2) Complete list of BEAM 4.9 bug fixes and improvements

New Features
[BEAM-1251] - Allow setting start and stop time
[BEAM-1216] - The NOAA AVHRR reader should support GAC products
[BEAM-1180] - Allow dragging files into VISAT
[BEAM-1151] - Geometry subset operator

Improvements
[BEAM-1276] - Add VISAT scripting support for the Python language
[BEAM-1263] - All processors shall provide help and "about" information
[BEAM-1242] - Support MERIS FSG L2 products
[BEAM-1237] - Update MERIS L2 flags for IODD version 8
[BEAM-1234] - The target product of some operators shall not be written
[BEAM-1231] - gpt command-line tool should have a 'parallelism' option
[BEAM-1221] - Need an option to configure multi-threading
[BEAM-1219]	- GPF API should implicitly convert parameter values
[BEAM-1183] - Improve reprojection UI usability
[BEAM-1156] - SubsetOp does not copy metadata
[BEAM-1052] - All processors should be able to store/reload their configuration
[BEAM-0009] - Define subsets with geographical co-ordinates


Bugs
[BEAM-1291] - Virtual bands may compute wrong results for non-zero levels of image pyramids
[BEAM-1284] - Reprojection should preserve log-scaling of bands
[BEAM-1281] - Orthorectification can not be used if tie-points are selected as elevation model
[BEAM-1248] - Title of transect-plot dialog is not updated if band selection changes
[BEAM-1246] - Layer-Manager does not reflect changes of mask names in Mask-Manager
[BEAM-1241] - For certain AATSR-products, TiePointGeoCoding.getPixelPos(GeoPos, PixelPos) yields wrong results
[BEAM-1239] - For MERIS bands the solar flux has the wrong unit
[BEAM-1229] - OBPG SeaWiFS L2 files can not be opened
[BEAM-1228] - Rangefinder does not work